<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/categories_buttons_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/latest_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latest_func" />
        <Button
            android:id="@+id/hot_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hot_func" />
        <Button
            android:id="@+id/top_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/top_func" />
    </LinearLayout>
    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/categories_buttons_container" />
</RelativeLayout>